Closed
Bug 774770
Opened 13 years ago
Closed 13 years ago
Intermittent dom/bindings/crashtests/769464.html, dom/indexedDB/crashtests/726376-1.html | assertion count 1 is more than expected 0 assertions ("ASSERTION: Inner window no longer correct!: 'outer && outer->GetCurrentInnerWindow() == mWindow'")
Categories
(Core :: DOM: Workers, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: emorley, Assigned: khuey)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
|
1.20 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #754759 +++
Rev3 Fedora 12 mozilla-inbound debug test crashtest on 2012-07-17 07:42:04 PDT for push 4e46f0fa911d
slave: talos-r3-fed-035
https://tbpl.mozilla.org/php/getParsedLog.php?id=13603685&tree=Mozilla-Inbound
{
###!!! ASSERTION: Inner window no longer correct!: 'outer && outer->GetCurrentInnerWindow() == mWindow', file ../../../dom/workers/WorkerPrivate.cpp, line 3984
non-virtual thunk to js::DirectWrapper::toWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
non-virtual thunk to js::DirectWrapper::toWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
non-virtual thunk to js::DirectWrapper::toWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_AddStaticComponent (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<mozilla::plugins::IPCByteRange, std::allocator<mozilla::plugins::IPCByteRange> >::resize(unsigned int, mozilla::plugins::IPCByteRange) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::deque<IPC::Message, std::allocator<IPC::Message> >::push_back(IPC::Message const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<base::Histogram*, std::allocator<base::Histogram*> >::push_back(base::Histogram* const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<base::Histogram*, std::allocator<base::Histogram*> >::push_back(base::Histogram* const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
JSD_GetValueForObject (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
non-virtual thunk to js::SecurityWrapper<js::DirectWrapper>::~SecurityWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_InitCommandLine (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_InitCommandLine (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_main (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
stat (/home/cltbld/talos-slave/test/build/firefox/firefox-bin)
__libc_start_main+0x000000E6 (/lib/libc.so.6)
REFTEST TEST-UNEXPECTED-FAIL | file:///home/cltbld/talos-slave/test/build/reftest/tests/dom/bindings/crashtests/769464.html | assertion count 1 is more than expected 0 assertions
}
| Reporter | ||
Updated•13 years ago
|
Summary: Intermittent → Intermittent dom/bindings/crashtests/769464.html | assertion count 1 is more than expected 0 assertions
| Reporter | ||
Comment 1•13 years ago
|
||
Rev3 Fedora 12x64 mozilla-inbound debug test crashtest on 2012-07-17 06:59:12 PDT for push 164bd49a19a1
slave: talos-r3-fed64-019
https://tbpl.mozilla.org/php/getParsedLog.php?id=13602943&tree=Mozilla-Inbound
{
###!!! ASSERTION: Inner window no longer correct!: 'outer && outer->GetCurrentInnerWindow() == mWindow', file ../../../dom/workers/WorkerPrivate.cpp, line 3984
non-virtual thunk to js::DirectWrapper::toWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_AddStaticComponent (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<mozilla::plugins::IPCByteRange, std::allocator<mozilla::plugins::IPCByteRange> >::resize(unsigned long, mozilla::plugins::IPCByteRange) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::deque<IPC::Message, std::allocator<IPC::Message> >::push_back(IPC::Message const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<base::Histogram*, std::allocator<base::Histogram*> >::push_back(base::Histogram* const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
std::vector<base::Histogram*, std::allocator<base::Histogram*> >::push_back(base::Histogram* const&) (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
JSD_GetValueForObject (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
non-virtual thunk to js::SecurityWrapper<js::DirectWrapper>::~SecurityWrapper() (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_InitCommandLine (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_InitCommandLine (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
XRE_main (/home/cltbld/talos-slave/test/build/firefox/libxul.so)
stat (/home/cltbld/talos-slave/test/build/firefox/firefox-bin)
__libc_start_main+0x000000FD (/lib64/libc.so.6)
_start (/home/cltbld/talos-slave/test/build/firefox/firefox-bin)
++DOMWINDOW == 171 (0x3c86ce0) [serial = 1115] [outer = 0x20fbd70]
WARNING: IndexedDB databases not allowed for this principal!: file ../../../dom/indexedDB/IndexedDatabaseManager.cpp, line 1017
JavaScript error: file:///home/cltbld/talos-slave/test/build/reftest/tests/dom/indexedDB/crashtests/726376-1.html, line 5: indexedDB is null
WARNING: No outer window available!: file ../../../dom/base/nsGlobalWindow.cpp, line 9075
REFTEST TEST-PASS | file:///home/cltbld/talos-slave/test/build/reftest/tests/dom/indexedDB/crashtests/726376-1.html | (LOAD ONLY)
REFTEST INFO | Loading a blank page
++DOMWINDOW == 172 (0x248b310) [serial = 1116] [outer = 0x20fbd70]
REFTEST TEST-UNEXPECTED-FAIL | file:///home/cltbld/talos-slave/test/build/reftest/tests/dom/indexedDB/crashtests/726376-1.html | assertion count 1 is more than expected 0 assertions
}
Summary: Intermittent dom/bindings/crashtests/769464.html | assertion count 1 is more than expected 0 assertions → Intermittent dom/bindings/crashtests/769464.html, dom/indexedDB/crashtests/726376-1.html | assertion count 1 is more than expected 0 assertions ("ASSERTION: Inner window no longer correct!: 'outer && outer->GetCurrentInnerWindow() == mWindow'")
Version: 15 Branch → Trunk
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Reporter | ||
Updated•13 years ago
|
status-firefox17:
--- → affected
tracking-firefox17:
--- → ?
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Assignee | ||
Comment 82•13 years ago
|
||
I caught this in the record and replay VM. It's some sort of weird interaction between workers and the bfcache. I don't know how that's supposed to work, but I'll ask Ben on Monday.
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Assignee | ||
Comment 91•13 years ago
|
||
Updated•13 years ago
|
Attachment #649279 -
Flags: review?(bent.mozilla) → review+
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 96•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Updated•13 years ago
|
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•13 years ago
|
status-firefox16:
--- → affected
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•13 years ago
|
Keywords: intermittent-failure
Updated•13 years ago
|
Whiteboard: [orange]
You need to log in
before you can comment on or make changes to this bug.
Description
•