Bug 774770: Move the assertion to after the code that handles the cases the assertion guards against. r=bent